[gd_scene load_steps=4 format=3 uid="uid://s3fuxfwb0u2q"]

[ext_resource type="Theme" uid="uid://doqiwgxwjf22i" path="res://Themes/Default.tres" id="1_w5hub"]
[ext_resource type="Script" path="res://Scripts/Settings/AudioSettings.gd" id="1_x1g6r"]

[sub_resource type="Environment" id="Environment_uc7r6"]
background_mode = 3
glow_enabled = true
glow_strength = 1.41
glow_blend_mode = 1

[node name="AudioSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1g6r")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uc7r6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 83.0
offset_right = 1592.0
offset_bottom = 233.0
theme = ExtResource("1_w5hub")
theme_override_font_sizes/font_size = 150
text = "Audio Settings"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 939.0
offset_top = 961.0
offset_right = 1047.0
offset_bottom = 1022.0
theme = ExtResource("1_w5hub")
text = "Back"

[node name="Label" type="Label" parent="Back"]
visible = false
layout_mode = 0
offset_left = -31.0
offset_top = 8.0
offset_right = 9.0
offset_bottom = 49.0
text = ">"

[node name="Label2" type="Label" parent="Back"]
visible = false
layout_mode = 0
offset_left = 111.0
offset_top = 9.0
offset_right = 151.0
offset_bottom = 50.0
text = "<"

[connection signal="mouse_entered" from="Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
